# gtest-mixin

./: CMakeLists.txt  README.md  testgtest.cpp
in-place/: file-test.cpp  memory-test.cpp
in-place-fixture/: CMakeLists.txt  both-test.cpp  file-test.cpp  memory-test.cpp
mixin-fixture/: CMakeLists.txt  StringFixture.h  VectorFixture.h  both-test.cpp  file-test.cpp  memory-test.cpp  mixin-fixture.h  mixin-test.cpp
mixin-fixture/partial-fixtures/: file-fixture.h  memory-fixture.h
res/: CMakeLists.txt
virtual-inheritance-fixture/: CMakeLists.txt  StringFixture.cpp  StringFixture.h  VectorFixture.cpp  VectorFixture.h  both-test.cpp  file-test.cpp  memory-test.cpp  virt-inheritance-test.cpp
virtual-inheritance-fixture/PartialFixtures/: FileFixture.cpp  MemoryFixture.cpp  MemoryFixture.h
virtual-inheritance-fixture/partial-fixtures/: file-fixture.cpp  file-fixture.h  memory-fixture.cpp
